初始化项目

--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.0",
+    "@react-buddy/ide-toolbox-next": "^2.4.0",
+    "@react-buddy/palette-antd": "^5.3.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.33",
     "@types/react-dom": "18.0.11",
+    "antd": "^5.4.0",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "intercept-stdout": "^0.1.2",
     "next": "13.3.0",
     "postcss": "8.4.21",
+    "prettier": "^2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "recoil": "^0.7.7",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
   }
