--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "18.0.11",
     "antd": "^5.4.0",
     "autoprefixer": "10.4.14",
+    "clsx": "^1.2.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "intercept-stdout": "^0.1.2",
@@ -25,6 +26,8 @@
     "prettier": "^2.8.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
+    "react-use": "^17.4.0",
     "recoil": "^0.7.7",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
